uosagas-login-server (0.2) unstable; urgency=low

  * add option "auto_reload_user_database"
  * log accepted passwords to systemd journal

 --   

uosagas-login-server (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <max.kellermann@gmail.com>  Fri, 27 Dec 2024 21:15:28 +0100